# EOSA-Project

./: README.md  requirements.txt
Data Scraping/outage-collector/: .bootstrap_cache.json  .gitignore  CHANGELOG.md  FUTURE_FEATURES.md  HANDOFF.md  README.md  pyproject.toml  run_collector.ps1
Data Scraping/outage-collector/.github/workflows/: ci.yml
Data Scraping/outage-collector/collector/: __init__.py  __main__.py  config.py  datatypes.py  discovery.py  enrichment.py  filters.py  geo.py  logging_utils.py  normalizer.py  poller.py  scheduler.py  service.py  storage.py
Data Scraping/outage-collector/presets/: places.yml
Data Scraping/outage-collector/scripts/: check_url.py  inspect_overlay.py  record_har.sh  run_local.sh
Data Scraping/outage-collector/tests/: test_config.py  test_discovery.py  test_filters.py  test_normalizer.py  test_poller.py  test_scheduler.py  test_service.py  test_storage.py
Data Scraping/outage-collector/tests/fixtures/: duke_sample_payload.json
Data Scraping/power-usage/: Power_usage_summary.py  microgrid_results.csv  nrel_api_demo.py
Prediction Models/: Enfieild_outage.py
Prediction Models/model_training/: .gitignore  cell10.py  feature_engineering.py  gradient_boosting_model.ipynb  patch.diff  prophet_model.ipynb  ridge_regression_model.ipynb  run_enhanced_training.py  sarimax.py  sarimax_model.ipynb
Prediction Models/model_training/content/data/: test_hourly.csv
