[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outage-collector"
version = "0.1.0"
description = "Automated Duke Energy outage discovery, polling, filtering, and export service"
authors = [
    { name = "City of Enfield Power Project" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.27",
    "httpx>=0.28",
    "playwright>=1.55",
    "apscheduler>=3.11",
    "pydantic>=2.11",
    "python-dateutil>=2.9",
    "anyio>=4.0",
    "tzdata>=2024.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "ruff>=0.6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = ["S101"]

target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]

[tool.setuptools.packages.find]
where = ["collector"]
